gap fix

--- a/ui/language-toggle-mobile/index.module.scss
+++ b/ui/language-toggle-mobile/index.module.scss
@@ -4,7 +4,7 @@
 #main {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
+  gap: 20px;
   .link {
     &:hover {
       color: $main-green;
